# SodShockTube_cuda

./: .gitignore  CMakeLists.txt  README.md
src/CPU/: display.cpp  main.cpp  prepare.cpp  solver.cpp
src/CPU/include/: prepare.h  solver.h
src/GPU/: displayGPU.cu  kernel.cu  main.cu  solver.cu
src/GPU/include/: solver.cuh
test/: Plot.py  test.sh
